adjusted the margin spacing for the learnMore,  topscroll button. replaced the placeholders for the projects with three projects. Buttons on cards go to respective live page and github repo except for mresilience. temporary background color for cards set to blue. *TODO: fix intro css and make it mobile responsive

--- a/style.css
+++ b/style.css
@@ -71,22 +71,47 @@ p {
     border-radius: 5px;
     color:white;
     background:#146eb4;
-    width:10%;
+    width: 20%;
+    padding: 1%;
     text-align: center;
     margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
 }
+/* width of scroll button when desktop */
+@media screen and (min-width: 800px)  {
+    #scroll {
+        width: 10%;
+    }
+
+    .card{
+        margin: auto;
+    }
+}
+
+.card {
+    width: 100%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    height:90%;
+}
+
 
 .contactMe {
     margin-top: 2%;
 }
 
-.card {
-    margin: 10%;
+#intro {
+    margin: auto;
+    padding: 2%;
 }
 
-#intro {
-    margin:auto;
-    padding:2%;
+#bioContact {
+    margin: auto;
+    padding: 5%;
+}
+
+#frontProj {
+    background: #146eb4;
+    padding: 3%;
 }
